--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -32,3 +32,4 @@
 @forward "./safety-supp.scss";
 @forward "./quincy-supp.scss";
 @forward "./amica-forms.scss";
+@forward "./business-insurance/index.scss"
