--- a/src/scss/component/_button.scss
+++ b/src/scss/component/_button.scss
@@ -9,7 +9,7 @@
     min-width: 144px;
     font-family: 'Roboto';
     text-transform: uppercase;
-    font-size: 15px !important;
+    font-size: 16px;
     letter-spacing: 1px;
     @include flexbox();
     @include align-items($value: center);
