--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -328,3 +328,22 @@ h1 {
       margin: 0 auto;
     }
   }
+  .data-toggle {
+    font-size: 12px !important;
+    line-height: 18px;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    border: 2px solid var(--color-light-gray);
+    display: inline-block;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.popover-body {
+  padding: 6px 10px;
+  color: #616161;
+  background-color: #F1F8FE;
+}
+.bs-popover-end>.popover-arrow::after {
+  border-right-color: #F1F8FE;
+}
