create pricing pages

--- a/src/scss/pages/price-box.scss
+++ b/src/scss/pages/price-box.scss
@@ -14,7 +14,8 @@
             .radio-switch-state {
                 margin: 32px 0;
                 padding: 2.3rem 1.5rem;
-
+                background-color: #fff;
+                border: 0;
                 .price-ul {
                     margin-top: 32px;
                     font-size: 14px;
@@ -28,6 +29,11 @@
                         margin-bottom: 0;
                         color: var(--color-dark-blue) !important;
                     }
+                }
+                .price-build-info {
+                    border-top: 1px solid #E6E6E6;
+                    margin-top: 12px;
+                    color: #474747;
                 }
 
                 .btn-primary {
@@ -49,6 +55,12 @@
         }
     }
 }
+.select-pay-type {
+    .radio-check-switch input[type=radio]:checked 
+        + .radio-switch-state {
+            background: #fff;
+        }
+    }
 
 .box-shdow{
     background: #FFFFFF;
