--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -347,3 +347,6 @@ h1 {
 .bs-popover-end>.popover-arrow::after {
   border-right-color: #F1F8FE;
 }
+.priceConfirm .modal-dialog.modal-lg {
+  max-width: 710px;
+}
