--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -153,6 +153,9 @@ li {
     font-weight: 600;
 }
 
+.whitespace-nowrap{
+    white-space: nowrap;
+}
 .bg-light{
     background-color: var(--color-border-light) !important;
 }
