--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -448,6 +448,10 @@ li {
   font-weight: 600;
 }
 
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 .bg-light {
   background-color: var(--color-border-light) !important;
 }
@@ -2278,7 +2282,7 @@ tr:last-child td:last-child {
           box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.0784313725);
   background: #fff;
   border-radius: 12px;
-  padding: 16px;
+  padding: 10px;
 }
 
 .claim-additional-info {
@@ -2865,11 +2869,11 @@ tr:last-child td:last-child {
 }
 
 .properties-container {
-  background: -webkit-gradient(linear, left bottom, left top, from(#f2f7fc), to(#f2f7fc)), -webkit-gradient(linear, left bottom, left top, from(#e6e6e6), to(#e6e6e6));
-  background: -o-linear-gradient(bottom, #f2f7fc, #f2f7fc), -o-linear-gradient(bottom, #e6e6e6, #e6e6e6);
-  background: linear-gradient(0deg, #f2f7fc, #f2f7fc), linear-gradient(0deg, #e6e6e6, #e6e6e6);
+  background: -webkit-gradient(linear, left bottom, left top, from(#f2f7fc), to(#f2f7fc)), -webkit-gradient(linear, left bottom, left top, from(var(--color-border-light)), to(var(--color-border-light)));
+  background: -o-linear-gradient(bottom, #f2f7fc, #f2f7fc), -o-linear-gradient(bottom, var(--color-border-light), var(--color-border-light));
+  background: linear-gradient(0deg, #f2f7fc, #f2f7fc), linear-gradient(0deg, var(--color-border-light), var(--color-border-light));
   border-radius: 4px;
-  border: 1px solid #e6e6e6;
+  border: 1px solid var(--color-border-light);
 }
 
 label.checkbox-inline.squar-boxes {
@@ -2946,12 +2950,12 @@ label.checkbox-inline.squar-boxes img.offline {
 }
 
 .accordion.custom > .accordion-item.accordion-white.bordered {
-  border: 1px solid #E6E6E6;
+  border: 1px solid var(--color-border-light);
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 .accordion.custom > .accordion-item.accordion-white.bordered > .accordion-collapse.show {
-  border-top: 1px solid #E6E6E6;
+  border-top: 1px solid var(--color-border-light);
 }
 
 .accordion.custom.collectables .accordion-collapse .accordion.custom .accordion-button {
@@ -3335,6 +3339,28 @@ h1 {
 .no_result_found p {
   max-width: 317px;
   margin: 0 auto;
+}
+
+.data-toggle {
+  font-size: 9px !important;
+  line-height: 12px;
+  height: 16px;
+  width: 16px;
+  text-align: center;
+  border: 2px solid var(--color-light-gray);
+  display: inline-block;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.popover-body {
+  padding: 6px 10px;
+  color: #616161;
+  background-color: #F1F8FE;
+}
+
+.bs-popover-end > .popover-arrow::after {
+  border-right-color: #F1F8FE;
 }
 
 main .wrapper .admin-section-container {
@@ -9112,6 +9138,121 @@ main .wrapper .admin-section-container .content {
 }
 .business-insurance-flow .properties-count-field {
   width: 208px;
+}
+.business-insurance-flow .notice-box {
+  border: 1px solid var(--color-border-light);
+  background-color: #f1f8fe;
+  padding: 12px;
+  border-radius: 4px;
+}
+.business-insurance-flow .notice-box .notice-header {
+  padding-bottom: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.business-insurance-flow .notice-box .notice-header img {
+  margin-bottom: 1px;
+}
+.business-insurance-flow .notice-box .notice-header span {
+  margin-left: 4px;
+  font-size: 14px;
+  line-height: 22px;
+  color: #2b2b2b;
+}
+.business-insurance-flow .notice-box .notice-body {
+  font-size: 12px;
+  line-height: 16px;
+  color: var(--color-light-gray);
+  margin-bottom: 10px;
+}
+.business-insurance-flow .notice-box .notice-footer img {
+  margin-bottom: 1px;
+}
+.business-insurance-flow .notice-box .notice-footer span {
+  margin-left: 4px;
+  font-size: 12px;
+  line-height: 16px;
+  color: #2b2b2b;
+}
+.business-insurance-flow .business-cards.job-type-cards .business-card .checkbox-label {
+  font-size: 14px !important;
+}
+.business-insurance-flow .business-cards .business-card {
+  width: auto;
+  position: relative;
+  margin-right: 16px;
+}
+.business-insurance-flow .business-cards .business-card:last-child {
+  margin-right: 0;
+}
+.business-insurance-flow .business-cards .business-card .checkbox-custom {
+  display: none;
+}
+.business-insurance-flow .business-cards .business-card .checkbox-label {
+  padding: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #e6e6e6;
+  border-radius: 8px;
+  margin-left: 0;
+}
+.business-insurance-flow .business-cards .business-card .checkbox-label img {
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+.business-insurance-flow .business-cards .business-card input:checked ~ .checkbox-custom {
+  display: block;
+  position: absolute;
+  top: 14px;
+  left: 14px;
+}
+.business-insurance-flow .business-cards .business-card input:checked ~ .checkbox-label {
+  border: 2px solid #016bbf;
+  background: #ebf5fd;
+}
+.business-insurance-flow .radio-label.fs-14 {
+  font-size: 14px !important;
+}
+.business-insurance-flow .accordion.custom .accordion-button.hide-arrow:after {
+  opacity: 0;
+}
+.business-insurance-flow .accordion.custom .accordion-button:not(.collapsed):after {
+  opacity: 1;
+}
+.business-insurance-flow .wide-box.claim-section label.checkbox-inline.squar-boxes {
+  width: 220px;
+  height: 156px;
+  margin-right: 16px;
+  margin-top: 0;
+}
+.business-insurance-flow .wide-box.claim-section label.checkbox-inline.squar-boxes:last-child {
+  margin-right: 0;
+}
+.business-insurance-flow .wide-box.claim-section label.checkbox-inline.squar-boxes .checkbox-label {
+  padding: 16px;
+}
+.business-insurance-flow .business-card.claim-section label.checkbox-inline.squar-boxes {
+  width: 135px;
+  margin-right: 16px;
+  margin-top: 0;
+}
+.business-insurance-flow .business-card.claim-section label.checkbox-inline.squar-boxes:last-child {
+  margin-right: 0;
+}
+.business-insurance-flow .box-500 {
+  max-width: 500px;
 }
 
 .navbar-toggler {
