--- a/src/assets/css/pages/price-box.css
+++ b/src/assets/css/pages/price-box.css
@@ -127,6 +127,8 @@
 .price-box .radio-check-switch .form-item .radio-switch-state {
   margin: 32px 0;
   padding: 2.3rem 1.5rem;
+  background-color: #fff;
+  border: 0;
 }
 .price-box .radio-check-switch .form-item .radio-switch-state .price-ul {
   margin-top: 32px;
@@ -140,6 +142,11 @@
   margin-bottom: 0;
   color: var(--color-dark-blue) !important;
 }
+.price-box .radio-check-switch .form-item .radio-switch-state .price-build-info {
+  border-top: 1px solid #E6E6E6;
+  margin-top: 12px;
+  color: #474747;
+}
 .price-box .radio-check-switch .form-item .radio-switch-state .btn-primary {
   margin-top: 52px;
 }
@@ -152,6 +159,10 @@
   position: relative;
   width: 50px;
   height: 47px;
+}
+
+.select-pay-type .radio-check-switch input[type=radio]:checked + .radio-switch-state {
+  background: #fff;
 }
 
 .box-shdow {
