--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -153,6 +153,10 @@ li {
     font-weight: 600;
 }
 
+.text-title{
+    color: var(--color-title);
+}
+
 .whitespace-nowrap{
     white-space: nowrap;
 }
