--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -448,6 +448,10 @@ li {
   font-weight: 600;
 }
 
+.text-title {
+  color: var(--color-title);
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
 }
@@ -9193,6 +9197,15 @@ main .wrapper .admin-section-container .content {
   line-height: 16px;
   color: #2b2b2b;
 }
+.business-insurance-flow .white-box-container {
+  padding: 12px;
+  border-radius: 8px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-border-light);
+}
+.business-insurance-flow .white-box-container .input-group input.ms-2 {
+  margin-left: 8px !important;
+}
 .business-insurance-flow .business-cards.job-type-cards .business-card .checkbox-label {
   font-size: 14px !important;
 }
@@ -9268,6 +9281,15 @@ main .wrapper .admin-section-container .content {
 }
 .business-insurance-flow .box-500 {
   max-width: 500px;
+}
+.business-insurance-flow .currency-range .append {
+  width: 65px;
+}
+.business-insurance-flow .currency-range .preppend {
+  width: 70px;
+}
+.business-insurance-flow .js-calculator_text-input.ms-0 {
+  margin-left: 0 !important;
 }
 
 .navbar-toggler {
@@ -9348,6 +9370,9 @@ main .wrapper .admin-section-container .content {
 }
 .f-dropdown select {
   display: none;
+}
+.f-dropdown.fw-500 .f-dropdown > span > span {
+  font-weight: 500;
 }
 .f-dropdown > span {
   cursor: pointer;
@@ -10648,5 +10673,75 @@ label {
 
 .owl-carousel .owl-stage-outer {
   padding: 30px 0;
+}
+
+.ag-calculator_input-wrap .rangeslider--horizontal {
+  display: inline-block;
+  height: 8px;
+  margin-top: 20px;
+  background-color: #CEE6F9;
+  border-radius: 4px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.ag-calculator_input-wrap .col-4 {
+  width: 110px;
+}
+
+.ag-calculator_input-wrap .col-8 {
+  width: calc(100% - 110px);
+}
+
+.ag-calculator_input-wrap .rangeslider__fill {
+  background-color: #016BBF;
+  border-radius: 4px;
+}
+
+.rangeslider__handle:after {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(255, 255, 255, 0)));
+  background-image: -o-linear-gradient(rgba(0, 0, 0, 0), rgba(255, 255, 255, 0));
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(255, 255, 255, 0));
+  border-radius: 50%;
+}
+
+.ag-calculator_input-wrap .rangeslider__handle {
+  height: 24px;
+  width: 24px;
+  border: 5px solid #fff;
+  background-image: none;
+  z-index: 5;
+  top: -7px;
+  -webkit-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none;
+  background: #016BBF;
+}
+
+.range-percentage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: none;
+  flex-wrap: nowrap;
+  width: 100%;
+}
+
+.range-percentage .append, .range-percentage .preppend {
+  width: 30px;
+  text-align: left;
+  padding-top: 11px;
+}
+
+.range-percentage .preppend {
+  text-align: right;
+  width: 44px;
+}
+
+.range-percentage .middle {
+  width: calc(100% - 74px);
 }
 /*# sourceMappingURL=main.css.map */
