--- a/src/scss/component/_dropdown.scss
+++ b/src/scss/component/_dropdown.scss
@@ -10,6 +10,9 @@
         display: none;
     }
 
+    &.fw-500 .f-dropdown > span > span{
+        font-weight: 500;
+    }
     &>span {
         cursor: pointer;
         padding: 8px 12px;
@@ -33,7 +36,6 @@
             font-family: 'Roboto';
             font-style: normal;
             font-weight: 400;
-
             line-height: 18px;
         }
 
