--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -259,6 +259,7 @@ button {
   --color-sucess:#01BF42;
   --color-dark-blue:#22305D;
   --color-blue-shade:#F2F7FC;
+  --color-blue-bg-light:#F1F8FE;
   --color-primary-100:#016BBF;
   --grid-width:1400px;
   --gutter-gap:1.25rem;
@@ -347,11 +348,11 @@ a {
 }
 
 .text-orange {
-  color: #F68A1F;
+  color: #F68A1F !important;
 }
 
 .bg-light-blue {
-  background-color: #F2F7FC;
+  background-color: #f2f7fc;
 }
 
 .text-left {
@@ -361,7 +362,7 @@ a {
 body {
   font-family: "Roboto";
   font-size: 14px;
-  background: #F8FBFE;
+  background: #f8fbfe;
 }
 
 ul,
@@ -381,7 +382,7 @@ li {
 }
 
 .bg-blue-light-2 {
-  background: #E2F0FB !important;
+  background: #e2f0fb !important;
 }
 
 .pt-4 {
@@ -469,6 +470,20 @@ li {
   width: 100% !important;
 }
 
+@media screen and (min-width: 576px) {
+  .w-sm-100 {
+    width: 100%;
+  }
+  .w-sm-75 {
+    width: 75%;
+  }
+  .w-sm-50 {
+    width: 50%;
+  }
+  .w-sm-25 {
+    width: 25%;
+  }
+}
 .h-100 {
   height: 100% !important;
 }
@@ -589,7 +604,7 @@ main .wrapper .content-main.full-size {
 }
 main .wrapper .content-main .content {
   padding-top: 40px;
-  background: #F8FBFE;
+  background: #f8fbfe;
 }
 main .wrapper .logo {
   position: relative;
@@ -2634,7 +2649,7 @@ label.checkbox-inline.squar-boxes img.offline {
   position: absolute;
   right: 50px;
   top: 13px;
-  z-index: 100000;
+  z-index: 1000;
 }
 .keep-in-vault checkbox-label {
   font-weight: 300;
@@ -8795,6 +8810,52 @@ main .wrapper .admin-section-container .content {
 .business-insurance-flow .accordion.custom .accordion-button:not(.collapsed):after {
   opacity: 1;
 }
+.business-insurance-flow .claim-section.auto-ratio {
+  max-width: 860px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.business-insurance-flow .claim-section.auto-ratio label.checkbox-inline.squar-boxes {
+  flex-grow: 1;
+}
+.business-insurance-flow .claim-section label.checkbox-inline.squar-boxes .tooltip-card {
+  position: relative;
+}
+.business-insurance-flow .claim-section label.checkbox-inline.squar-boxes .tooltip-card img {
+  margin: 0;
+}
+.business-insurance-flow .claim-section label.checkbox-inline.squar-boxes .tooltip-card .tooltip-content {
+  display: none;
+  background-color: var(--color-blue-bg-light);
+  color: var(--color-title);
+  border: 1px solid var(--color-border-light);
+  padding: 6px 10px;
+  border-radius: 4px;
+  position: absolute;
+  top: 0;
+  left: calc(100% + 10px);
+  z-index: 100000;
+  min-width: 190px;
+  text-align: left;
+  font-size: 12px;
+}
+.business-insurance-flow .claim-section label.checkbox-inline.squar-boxes .tooltip-card .tooltip-content:after {
+  content: "";
+  position: absolute;
+  right: calc(100% - 5px);
+  top: 5px;
+  width: 10px;
+  height: 10px;
+  transform: rotate(45deg);
+  background: #f1f8fe;
+  display: block;
+  border: solid #ddd;
+  border-width: 0 0 1px 1px;
+  border-bottom-left-radius: 4px;
+}
+.business-insurance-flow .claim-section label.checkbox-inline.squar-boxes .tooltip-card:hover .tooltip-content {
+  display: block;
+}
 .business-insurance-flow .wide-box.claim-section label.checkbox-inline.squar-boxes {
   width: 220px;
   height: 156px;
@@ -8818,6 +8879,9 @@ main .wrapper .admin-section-container .content {
 .business-insurance-flow .business-card.claim-section label.checkbox-inline.squar-boxes:last-child {
   margin-right: 0;
 }
+.business-insurance-flow .business-card.claim-section label.checkbox-inline.squar-boxes.rectangle-box {
+  width: 280px;
+}
 .business-insurance-flow .box-500 {
   max-width: 500px;
 }
@@ -8829,6 +8893,17 @@ main .wrapper .admin-section-container .content {
 }
 .business-insurance-flow .js-calculator_text-input.ms-0 {
   margin-left: 0 !important;
+}
+.business-insurance-flow .claim-section label.checkbox-inline.box-300 {
+  width: 319px;
+}
+.business-insurance-flow .claim-section label.checkbox-inline.box-140 {
+  width: 150px;
+  height: 156px;
+}
+.business-insurance-flow .claim-section label.checkbox-inline.box-250 {
+  width: 244px;
+  height: 156px;
 }
 
 .navbar-toggler {
@@ -8902,7 +8977,6 @@ main .wrapper .admin-section-container .content {
 .f-dropdown {
   --max-scroll: 3;
   position: relative;
-  z-index: 1;
 }
 .f-dropdown select {
   display: none;
@@ -8969,7 +9043,7 @@ main .wrapper .admin-section-container .content {
   max-height: calc(var(--max-scroll) * 46px);
   top: 40px;
   left: 0;
-  z-index: 1;
+  z-index: 51;
   right: 0;
   background: #FFF;
   border: 1px solid #CCC;
