--- a/src/scss/utils/_variable.scss
+++ b/src/scss/utils/_variable.scss
@@ -33,6 +33,7 @@ $blue-border: #99C4E5;
 $blue-border2: #CCE1F2;
 $dark-blue: #22305D;
 $blue-shade: #F2F7FC !default;
+$blue-bg-light: #F1F8FE;
 
 
 
