--- a/src/scss/utils/_color.scss
+++ b/src/scss/utils/_color.scss
@@ -34,6 +34,7 @@ $colors: ("primary": $primary,
     "sucess": $sucess,
     "dark-blue": $dark-blue,
     "blue-shade": $blue-shade,
+    "blue-bg-light": $blue-bg-light,
 
 
 ) !default;
