--- a/src/scss/component/_input.scss
+++ b/src/scss/component/_input.scss
@@ -56,6 +56,11 @@ input:-webkit-autofill:active {
     box-shadow: none;
   }
 }
+textarea.form-control {
+  height: 100px;
+  padding-top:12px;
+  padding-bottom:12px; 
+}
 
 .input-group {
   @include flexbox();
@@ -158,7 +163,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   input.radio-control:checked ~ .radio-label {
     background: linear-gradient(0deg, #e6f1f9, #e6f1f9),
-      linear-gradient(0deg, #b3d3ec, #b3d3ec);
+    linear-gradient(0deg, #b3d3ec, #b3d3ec);
     border: 1px solid #b3d3ec;
 
     &:after {
@@ -173,5 +178,22 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         position: relative;
         margin-left: 5px;
       }
+  }
+}
+.radio-pill {
+  .radio-label {
+    padding: 6px 12px;
+    border: 1px solid #b3d3ec;
+    border-radius: 4px;
+    color: #016bbf;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    margin-left: 0;
+  }
+  input.radio-control:checked ~ .radio-label {
+    background: #016bbf;
+    border: 1px solid #016bbf;
+    color: #fff;
   }
 }
