--- a/src/scss/pages/_housing-insurance.scss
+++ b/src/scss/pages/_housing-insurance.scss
@@ -70,6 +70,39 @@ label.checkbox-inline.squar-boxes {
   }
 }
 
+label.checkbox-inline.squar-boxes.blue-shadow {
+  background: none;
+  border-radius: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  padding: 0;
+  .checkbox-label {
+    width: 100%;
+    height: 100%;
+    -webkit-box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.0784313725);
+    box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.0784313725);
+    background: #fff;
+    border-radius: 12px;
+    padding: 10px;
+  }
+  .checkbox-control:checked ~ .checkbox-label {
+    -webkit-box-shadow: 0px 20px 30px 0px #ddeefb;
+    box-shadow: 0px 20px 30px 0px #ddeefb;
+  }
+  .checkbox-control:disabled ~ .checkbox-label {
+    pointer-events: none;
+    opacity: 0.5;
+    cursor: no-drop;
+  }
+  &.blue-select {
+    .checkbox-control:checked ~ .checkbox-label {
+      background-color: #E6F1F9;
+      border-color: #B3D3EC !important;
+      color: #016BBF;
+    }
+  }
+}
+
 .accordion.custom{
   > .accordion-item.accordion-white.bordered{
     border: 1px solid var(--color-border-light);
