--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -339,6 +339,9 @@ h1 {
     border-radius: 50%;
     cursor: pointer;
 }
+.data-toggle.text-blue {
+  border-color: var(--color-primary);
+}
 .popover-body {
   padding: 6px 10px;
   color: #616161;
@@ -349,4 +352,61 @@ h1 {
 }
 .priceConfirm .modal-dialog.modal-lg {
   max-width: 710px;
+}
+.upload_take_img {
+  padding: 24px;
+  width: 432px;
+  background-color: #F2F7FC;
+  border-radius: 10px;
+  margin: 0 auto;
+  display: flex;
+  
+}
+.uploadBox {
+  display: flex;
+  margin: 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  width: 180px;
+  height: 160px;
+  cursor: pointer;
+  input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+    position: absolute;
+  }
+  span {
+    padding: 24px 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    border-radius: 12px;
+    background-color: #E6F1F9;
+    img {
+      width: 80px;
+    }
+  }
+  .doc-upload{
+    background-color: #fff;
+    border-radius: 6px;
+    border: 1px solid #99C4E5;
+    position: relative;
+    > img {
+      padding: 3px;
+    }
+  }
+  .delete-doc {
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    right: 4px;
+    top: 4px;
+    font-size: 0;
+  }
 }
